fix utf8 issue in subject

--- a/internal/translations/locales/de/messages.gotext.json
+++ b/internal/translations/locales/de/messages.gotext.json
@@ -4,7 +4,7 @@
         {
             "id": "{SiteName}: confirm mail address",
             "message": "{SiteName}: confirm mail address",
-            "translation": "{SiteName}: Mail-Adresse bestätigen",
+            "translation": "{SiteName}: Mail-Adresse bescheinigen",
             "placeholders": [
                 {
                     "id": "SiteName",
